assets/css/main.css
/* ... */
blockquote {
    border-radius: 4px;
    border-left: 4px solid var(--on-surface-variant);
    background-color: color-mix(in srgb, var(--surface-variant) 40%, transparent 60%);
    padding: 4px 16px;
    margin: 1em 0;
}

main {
    margin-left: auto;
    margin-right: auto;
    padding: 1em;
    max-width: 832px;
    min-width: 0;
    width: 100%;
    box-sizing: border-box;
    overflow-wrap: break-word;
    padding-top: calc(var(--navbar-height) + var(--spacing-regular));
    flex: 1 0 auto;
}

ul ul {
    padding-left: 20px;
}

.coin-address {
    display: block;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.coin-address img {
    image-rendering: pixelated;
    width: 180px;
    height: 180px;
    border-radius: 16px;
}

.card-list {
    list-style: none;
    padding-left: 0;
}

.card, .card:visited {
    display: block;
    text-decoration: none;
    background-color: var(--surface-container-high);
    color: var(--on-surface-container);
    padding: var(--spacing-regular);
    border-radius: var(--radius-large);
    margin: var(--spacing-regular);
}

.card > :first-child {
    margin-top: 0;
}

.card > :last-child {
    margin-bottom: 0;
}

.card h3 {
    margin-bottom: var(--spacing-small);
}

.post-date {
    margin-top: 0;
    color: var(--on-surface-variant);
}

.card-img {
    background-image: linear-gradient(to bottom, transparent 20%, var(--surface-container-high) 50%), var(--bg-image);
    height: calc(var(--card-img-size) * 2);
    overflow: hidden;
    margin-bottom: calc(var(--card-img-size) * -1);
}

footer {
    padding: 1em 1em;
    text-align: center;
    overflow-wrap: break-word;
    background: var(--surface-container);
    border-top-left-radius: var(--radius-large);
    border-top-right-radius: var(--radius-large);
}

footer a, footer a:visited {
    color: var(--on-surface-variant)
}

#footer-columns {
    display: grid;
    grid-template-columns: 1fr auto 1fr;
    gap: 1rem;
    align-items: center;
}

#footer-columns ul {
    padding: 0;
}

#pfp-layout {
    display: flex;
    text-align: left;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    list-style: none;
    justify-self: start;
    margin: 0;
}

#pfp-layout img {
    display: block;
    left-margin: 0;
}

#pfp-layout > :first-child {
    padding-left: 0;
}

#pfp-layout li {
    display: block;
    padding: 0 0.5em;
}

.pfp {
    border-radius: 50%;
}

.footer-row {
    justify-self: center;
    margin: 0;
}

.footer-row li {
    display: inline-block;
    padding: 0 0.5em;
}

.footer-column {
    justify-self: end;
    text-align: left;
    margin: 0;
}

.footer-column li {
    display: block;
    padding: 0 0.5em;
}

@media (max-width: 900px) {
    #footer-columns {
        grid-template-columns: 1fr;
    }

    #pfp-layout {
        flex-direction: column;
        justify-self: center;
        align-items: center;
    }

    #pfp-layout li {
        justify-self: center;
    }

    .footer-row li,
    .footer-column li {
        display: block;
        text-align: center;
    }

    .footer-row,
    .footer-column {
        justify-self: center;
        text-align: center;
    }
}

#navbar-content-hider {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    background-color: var(--surface);
    margin-left: var(--spacing-regular);
    margin-right: var(--spacing-regular);
    height: calc(var(--navbar-height) / 2 + var(--spacing-regular));
}

#navbar {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    list-style: none;
    height: var(--navbar-height);
    background-color: var(--surface-container);
    white-space: nowrap;
    margin: var(--spacing-regular);
    border-radius: var(--radius-full);
    filter: drop-shadow(0 0 2px var(--shadow));
    overflow-x: auto;
    overflow-y: hidden;
}

#navbar ul {
    display: grid;
    grid-template-columns: repeat(3, 100fr);
    padding: 0;
    margin: 0;
    list-style: none;
}

#navbar ul li {
    border-radius: var(--radius-full);
    min-width: 120px;
}

#navbar ul li:hover {
    background-color: var(--surface-container-high);
}

#navbar ul li[aria-current] {
    background-color: var(--secondary-container);
}

#navbar ul li[aria-current]:hover {
    background-color: var(--secondary-container);
}

#navbar ul li a {
    color: var(--on-surface-variant);
    height: var(--navbar-height);
    display: flex;
    align-items: center;
    text-decoration: none;
    justify-content: center;
}

#navbar ul li a:visited {
    color: var(--on-surface-variant);
}

#navbar ul li[aria-current] a {
    color: var(--on-secondary-container);
}

#navbar ul li[aria-current]:hover a {
    color: var(--on-secondary-container);
}

#backarrow {
  	position: fixed;
  	top: 0;
  	left: 0;
  	fill: var(--on-secondary-container);
  	background-color: var(--secondary-container);
  	margin: var(--spacing-regular);
  	border-radius: var(--radius-full);
  	filter: drop-shadow(0 0 2px var(--shadow));
}

#backarrow svg {
		display: block;
		padding: 0.5em;
}

.url-button, .url-button:visited {
    display: inline-flex;
    text-decoration: none;
    gap: .2em;
    background-color: var(--primary);
    color: var(--on-primary);
    padding: var(--spacing-large);
    border-radius: var(--radius-full);
}

.url-button svg {
    fill: var(--on-primary);
}

button, select, option, input, select, textarea {
    font-family: inherit;
}

button, select, .button, .button:visited {
    color: white;
    font-size: 0.95rem;
    font-weight: 600;
    letter-spacing: 0.009375rem;
    background-color: #0b7bb7;
    border-radius: 100px;
    border: none;
    padding: 16px 24px;
    margin: 0.25rem;
    cursor: pointer;
}

select {
    appearance: none;
    background-image: url("/assets/arrow-drop-down-light.svg");
    background-position: right 12px center;
    background-repeat: no-repeat;
    background-size: 24px 24px;
    padding-right: 40px;
}
/* ... */

